crates/solidity/testing/snapshots/bindings_output/yul/stack_assign/generated/v2/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or OpenBrace or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or YulBreakKeyword or YulContinueKeyword or YulDecimalLiteral or YulForKeyword or YulFunctionKeyword or YulHexLiteral or YulIdentifier or YulIfKeyword or YulLeaveKeyword or YulLetKeyword or YulSwitchKeyword.
   ╭─[input.sol:6:13]
   │
 6 │ ╭─▶             =: x
 7 │ ├─▶         }
   │ │               
   │ ╰─────────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["YulStackAssignment" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:2:14] (function, type: function () returns void)
- Def: #3 ["x" @ input.sol:4:17] (yul variable)

------------------------------------------------------------------------

References (1):
- Ref: ["sload" @ input.sol:5:13] -> built-in

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract YulStackAssignment {
   │          ─────────┬────────  
   │                   ╰────────── name: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 4 │             let x := 0
   │                 ┬  
   │                 ╰── name: 3
 5 │             sload(10)
   │             ──┬──  
   │               ╰──── built-in
───╯
